Add alternate latent vector ramping: -2 to 2 for subset of a random vector

--- a/sourcecode/demo_vis.ipynb
+++ b/sourcecode/demo_vis.ipynb
@@ -90,8 +90,8 @@
     "    pass\n",
     "\n",
     "args = Object()\n",
-    "args.generator_file = 'models/005/GAN_GEN_010000.pth'\n",
-    "args.discriminator_file = 'models/005/GAN_DIS_010000.pth'\n",
+    "args.generator_file = 'models/008/GAN_GEN_001000.pth'\n",
+    "args.discriminator_file = 'models/008/GAN_DIS_001000.pth'\n",
     "args.depth = 5 #5 == 64x64\n",
     "args.latent_size = 512\n",
     "args.num_points = 1\n",
@@ -133,9 +133,17 @@
     "\n",
     "variance = 10.0\n",
     "\n",
+    "dim1 = 350\n",
+    "dim2 = 400\n",
     "\"\"\"\n",
-    "dim1 = 10\n",
-    "dim2 = 511\n",
+    "start_latent = th.randn(args.latent_size)\n",
+    "end_latent = start_latent.clone()\n",
+    "start_latent[dim1:dim2] = -2.0\n",
+    "end_latent[dim1:dim2] = 2.0\n",
+    "start_latent = normalize(start_latent).to(device)\n",
+    "end_latent = normalize(end_latent).to(device)\n",
+    "\"\"\"\n",
+    "\"\"\"\n",
     "start_latent = normalize(th.ones([args.transition_points, args.latent_size]).to(device))\n",
     "end_latent = th.ones([args.latent_size])\n",
     "end_latent[dim1:dim2] = 0.0\n",
@@ -145,6 +153,7 @@
     "\n",
     "start_latent = normalize(th.randn(args.latent_size).to(device))\n",
     "end_latent = normalize(start_latent+variance*normalize(th.randn(args.latent_size)).to(device))\n",
+    "\n",
     "\n",
     "linear_ramp = th.linspace(0, 1, args.transition_points).unsqueeze(1).expand(args.transition_points, args.latent_size).to(device)\n",
     "\n",
